tests/rosetta/out/Smalltalk/benfords-law.out
/workspace/mochi/tests/rosetta/out/Smalltalk/benfords-law.st:38: parse error, expected '|' or identifier
